--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,10 @@ $checkboxFontSize: 15px;
     text-transform: uppercase;
 }
 
+.redText {
+    color: $footer_FontRed;
+}
+
 body {
     @extend .futuraPTFont;
     position: relative;
@@ -121,8 +125,9 @@ h1 {
                 @extend .freightFontItlaic;
             }
 
-            #inviteImage {
-                margin-bottom: $spacingHeight * 2;//~
+            .largeText {
+                font-size: 70px;
+                // margin-bottom: $spacingHeight * 2;//~
             }
 
             hr {
@@ -138,7 +143,7 @@ h1 {
 
             .inviteDetails {
                 text-align: center;
-                margin: 0 20% 0 20%;
+                margin: -$spacingHeight * 2 20% 0 20%;
             }
 
             ul {
