--- a/css/main.css
+++ b/css/main.css
@@ -52,9 +52,22 @@ h1 {
   background-color: rgba(69, 69, 69, 0.9);
   width: 100%;
   height: 100%;
-  z-index: 3;
   overflow-x: hidden;
   position: relative;
+}
+.popOver .rectangleFrame {
+  width: 80px;
+  border: solid 6px #f5f5f5;
+}
+.popOver .rectangleFrame:first-child {
+  position: absolute;
+  top: 4.5em;
+  height: 510px;
+  z-index: 1;
+}
+.popOver .rectangleFrame:last-child {
+  height: 55px;
+  margin-top: -8.25em;
 }
 .popOver .overlayImg {
   width: 100px;
@@ -83,6 +96,9 @@ h1 {
   background-color: white;
   border: black 1px solid;
 }
+.popOver #popOverContent main {
+  z-index: 2;
+}
 .popOver #popOverContent main h1 {
   margin-bottom: 1.5em;
 }
@@ -109,14 +125,14 @@ h1 {
   margin-bottom: 3em;
 }
 .popOver #popOverContent main li::before {
-  color: red;
+  color: #c40045;
   content: "•";
 }
 .popOver #popOverContent main li {
   line-height: 1.5em;
 }
 .popOver #popOverContent footer {
-  padding-top: 3em;
+  padding: 3em 3em 6em;
   background-color: #9f173d;
   color: white;
 }
