--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,8 @@ $mobileWidth: 320px; //~
 $spacingHeight: 1.5em;
 
 $translucentGrey: transparentize(#454545, 0.1);
-$lineRed: #c40045;
+$frameGrey: #f5f5f5;
+$line_BulletRed: #c40045;
 $footer_FontRed: #9f173d;
 
 $checkboxFontSize: 15px;
@@ -65,10 +66,31 @@ h1 {
     background-color: $translucentGrey;
     width: 100%;//vw;//~
     height: 100%;//100vh;
-    z-index: 3;
+    // z-index: 3;
 
     overflow-x: hidden;
     position: relative;
+
+    //rectangle frames
+    .rectangleFrame {
+        width: 80px;
+        border: solid  6px $frameGrey;
+    }
+
+    .rectangleFrame:first-child {
+        position: absolute;
+        top: $spacingHeight * 3;
+        height: 510px;
+        z-index: 1;
+        // height: 55px;
+    }
+
+    .rectangleFrame:last-child {
+        height: 55px;
+        // bottom: $spacingHeight * -6;
+        margin-top: $spacingHeight * -5.5;
+        // position: absolute;
+    }
 
     //images
     .overlayImg {
@@ -106,12 +128,11 @@ h1 {
 
         background-color: white;
         border: black 1px solid;
-        // border-collapse: separate;
-        // border-spacing: 50px;
 
         // invite text + image
         main {
             @extend .centerAlign;
+            z-index: 2;
 
             h1 {
                 margin-bottom: $spacingHeight;
@@ -132,7 +153,7 @@ h1 {
 
             hr {
                 margin: $spacingHeight 0 $spacingHeight 0;
-                background-color: $lineRed;
+                background-color: $line_BulletRed;
                 height: 1px;
                 border: none;
                 width: 20%;
@@ -152,7 +173,7 @@ h1 {
             }
 
             li::before {
-                color: red;
+                color: $line_BulletRed;
                 content: "•";
             }
 
@@ -164,10 +185,11 @@ h1 {
         // form 
         footer {
             @extend .centerAlign;
-            padding-top: $spacingHeight * 2;
+            padding: $spacingHeight * 2 $spacingHeight * 2 $spacingHeight * 4;
 
             background-color: $footer_FontRed;
             color: white;
+
 
             p {
                 margin-bottom: $spacingHeight;
