--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,8 @@ $translucentGrey: transparentize(#454545, 0.1);
 $frameGrey: #f5f5f5;
 $line_BulletRed: #c40045;
 $footer_FontRed: #9f173d;
+$checkboxLabelPink: #febed5;
+$checkboxPink: #fbb6ce;
 
 $checkboxFontSize: 15px;
 
@@ -238,16 +240,36 @@ h1 {
                 //     padding-left: 10px;
                 // }
 
-           
-
                 input::placeholder {
                     color: black;
                     @extend .futuraPTFont;
                     padding-left: 10px;
                 }
 
+                // checkbox + label styling
                 #confirmationLabel {
+                    color: $checkboxLabelPink;
+                    margin-top: $spacingHeight;
                     font-size: $checkboxFontSize;
+                    width: 40%;
+                }
+
+                #confirmationLabel > input{
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    -o-appearance: none;
+                    appearance: none;
+
+                    border: solid 1px $checkboxPink;
+                    width: 15px;
+                    height: 15px;
+                }
+
+                #confirmationLabel > input:checked + span::before {
+                    content: '\2713';
+                    position: absolute;
+                    margin-top: 4px;
+                    margin-left: -16px;
                 }
             }
         }
