--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
 $desktopWidth: 1200px;
 $mobileWidth: 320px; //~
 $spacingHeight: 1.5em;
+$spacingWidth: 10px;
+
 
 $translucentGrey: transparentize(#454545, 0.1);
 $frameGrey: #f5f5f5;
@@ -142,6 +144,7 @@ h1 {
 
             .inviteFirstLine {
                 margin-top: $spacingHeight * 2;
+                line-height: $spacingHeight;
             }
 
             .emphasis {
@@ -167,6 +170,7 @@ h1 {
             .inviteDetails {
                 text-align: center;
                 margin: -$spacingHeight * 2 20% 0 20%;
+                line-height: $spacingHeight;
             }
 
             ul {
@@ -209,37 +213,42 @@ h1 {
                 // height: 57.28px;
             }
             
+            .CTAbutton:hover {
+                background-color: white;
+                color: black;
+            }
+            
             form {
                 @extend .centerAlign;
 
                 #formText {
                     display: grid;
                     grid-template-columns: repeat(3, minmax(0, 1fr));
-                    column-gap: 10px;
+                    column-gap: $spacingWidth;
                 }
 
                 ::-webkit-input-placeholder {
                     color: black;
                     @extend .futuraPTFont;
-                    padding-left: 10px;
+                    padding-left: $spacingWidth;
                 }
                   
                 :-ms-input-placeholder {
                     color: black;
                     @extend .futuraPTFont;
-                    padding-left: 10px;
+                    padding-left: $spacingWidth;
                 }
                   
                 ::placeholder {
                     color: black;
                     @extend .futuraPTFont;
-                    padding-left: 10px;
+                    padding-left: $spacingWidth;
                 }
 
                 // input::placeholder {
                 //     color: black;
                 //     @extend .futuraPTFont;
-                //     padding-left: 10px;
+                //     padding-left: $spacingWidth;
                 // }
 
                 input[type=text], input[type=email] {
@@ -248,10 +257,12 @@ h1 {
 
                 // checkbox + label styling
                 #confirmationLabel {
+                    line-height: $spacingHeight / 1.25;
+                    font-size: 16px;//~
                     color: $checkboxLabelPink;
                     margin-top: $spacingHeight;
                     font-size: $checkboxFontSize;
-                    width: 40%;
+                    width: 60%;
 
                     display: grid;
                     grid-template-columns: 1fr 5fr;
@@ -281,10 +292,6 @@ h1 {
 
     // // mobile 
     // @media screen and (min-width: $mobileWidth) {
-    //     .popOver{
-    //         background-color: green;
-    //     }
-
     //     #popOverContent {
     //         main {
     //             .largeText {
@@ -297,7 +304,6 @@ h1 {
 // desktop 
 @media screen and (min-width: $desktopWidth) {
     .popOver {
-    background-color: blue;
     // images
         .chiselImg {
             width: 25%;
@@ -328,6 +334,7 @@ h1 {
             form {
                 #confirmationLabel {
                     grid-template-columns: 1fr 9fr;
+                    width: 40%;//~
                 }
             }
         }
