--- a/css/main.css
+++ b/css/main.css
@@ -56,13 +56,13 @@ h1 {
   position: relative;
 }
 .popOver .rectangleFrame {
-  width: 80px;
+  width: 30%;
   border: solid 6px #f5f5f5;
 }
 .popOver .rectangleFrame:first-child {
   position: absolute;
   top: 4.5em;
-  height: 510px;
+  height: 37%;
   z-index: 1;
 }
 .popOver .rectangleFrame:last-child {
@@ -146,7 +146,6 @@ h1 {
   background-color: black;
   color: white;
   border: none;
-  width: 138px;
   height: 40px;
 }
 .popOver #popOverContent footer .CTAbutton:hover {
@@ -155,8 +154,8 @@ h1 {
 }
 .popOver #popOverContent footer form #formText {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  column-gap: 10px;
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+  row-gap: 10px;
 }
 .popOver #popOverContent footer form ::-webkit-input-placeholder {
   color: black;
@@ -199,6 +198,16 @@ h1 {
   margin-left: -16px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 360px) {
+  .popOver .rectangleFrame:first-child {
+    height: 19.5%;
+  }
+}
+@media screen and (min-width: 360px) and (max-width: 890px) {
+  .popOver .rectangleFrame:first-child {
+    height: 32%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .popOver .chiselImg {
     width: 25%;
@@ -209,6 +218,12 @@ h1 {
     width: 15%;
     margin-top: -40%;
   }
+  .popOver .rectangleFrame {
+    width: 160px;
+  }
+  .popOver .rectangleFrame:first-child {
+    height: 410px;
+  }
   .popOver #popOverContent main .largeText {
     font-size: 70px;
   }
@@ -218,6 +233,10 @@ h1 {
   .popOver footer form #confirmationLabel {
     grid-template-columns: 1fr 9fr;
     width: 40%;
+  }
+  .popOver footer form #formText {
+    column-gap: 10px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
