--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,9 @@ h1 {
 .popOver #popOverContent main .cancelButton {
   color: #c40045;
   border: none;
+  background-color: rgba(255, 255, 255, 0);
   margin-left: auto;
+  margin-right: 20px;
   margin-top: 1.5em;
   cursor: pointer;
 }
@@ -237,6 +239,10 @@ h1 {
   .popOver #popOverContent main hr {
     width: 30%;
   }
+  .popOver #popOverContent main .cancelButton {
+    margin-right: 3%;
+    margin-top: 1.5em;
+  }
   .popOver footer form #confirmationLabel {
     grid-template-columns: 1fr 9fr;
     width: 40%;
@@ -244,6 +250,17 @@ h1 {
   .popOver footer form #formText {
     column-gap: 10px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+@media screen and (min-width: 1347px) and (max-width: 1454px) {
+  .popOver #popOverContent main .cancelButton {
+    margin-right: 1%;
+  }
+}
+@media screen and (min-width: 1458px) {
+  .popOver #popOverContent main .cancelButton {
+    margin-left: 104%;
+    margin-right: 1%;
   }
 }
 
