--- a/css/main.css
+++ b/css/main.css
@@ -163,8 +163,9 @@ h1 {
 }
 .popOver #popOverContent footer form #formText {
   display: grid;
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
   row-gap: 10px;
+  grid-auto-rows: 1fr;
 }
 .popOver #popOverContent footer form ::-webkit-input-placeholder {
   color: black;
@@ -248,8 +249,11 @@ h1 {
     width: 40%;
   }
   .popOver footer form #formText {
+    display: grid;
     column-gap: 10px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-rows: 0;
+    row-gap: 10px;
   }
 }
 @media screen and (min-width: 1347px) and (max-width: 1454px) {
