Added responsive images

--- a/css/main.scss
+++ b/css/main.scss
@@ -92,18 +92,17 @@ h1 {
 
     //images
     .overlayImg {
-        width: 100px;
         position: absolute;
     }
 
     .chiselImg {
-        width: 40%;
+        // width: 40%;
         margin-left: -80%;
         margin-top: 30%;
     }
 
     .shavingsImg {
-        width: 25%;
+        // width: 25%;
         margin-right: -73%;
         margin-top: -90%;
     }
@@ -307,13 +306,13 @@ h1 {
     .popOver {
         // images
         .chiselImg {
-            width: 25%;
+            // width: 25%;
             margin-left: -81.5%;
             margin-top: 20%;
         }
     
         .shavingsImg {
-            width: 15%;
+            // width: 15%;
             margin-top: -40%;
         }
 
