--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,8 @@ h1 {
   font-size: 15px;
   display: grid;
   grid-template-columns: 1fr 5fr;
+  justify-items: end;
+  column-gap: 10px;
 }
 .popOver #popOverContent footer form #confirmationLabel > input {
   -webkit-appearance: none;
