--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,6 @@ h1 {
 }
 .popOver #popOverContent footer form #confirmationLabel {
   line-height: 1.2em;
-  font-size: 16px;
   color: #febed5;
   margin-top: 1.5em;
   font-size: 15px;
@@ -196,14 +195,15 @@ h1 {
   -o-appearance: none;
   appearance: none;
   border: solid 1px #fbb6ce;
+  padding: 5px;
   width: 15px;
   height: 15px;
 }
 .popOver #popOverContent footer form #confirmationLabel > input:checked + span::before {
   content: "✓";
   position: absolute;
-  margin-top: 4px;
-  margin-left: -16px;
+  margin-top: 2px;
+  margin-left: -25.5px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 360px) {
