--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ h1 {
 .popOver .rectangleFrame:last-child {
   height: 55px;
   margin-top: -8.25em;
+  margin-bottom: 4.5em;
 }
 .popOver .overlayImg {
   position: absolute;
