--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ h1 {
   z-index: 1;
 }
 .popOver .rectangleFrame:last-child {
-  height: 55px;
+  height: 60px;
   margin-top: -8.25em;
   margin-bottom: 4.5em;
 }
@@ -95,7 +95,6 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: white;
-  border: black 1px solid;
 }
 .popOver #popOverContent main {
   z-index: 2;
@@ -109,15 +108,28 @@ h1 {
   margin-top: 1.5em;
   cursor: pointer;
 }
-.popOver #popOverContent main h1, .popOver #popOverContent main h2 {
+.popOver #popOverContent main .mainContent {
+  display: grid;
+  grid-template-rows: repeat(autofill, minmax(0, 1fr));
+  row-gap: 1.5em;
+  justify-items: center;
+  align-content: center;
+}
+.popOver #popOverContent main h2 {
   margin-bottom: 1.5em;
 }
 .popOver #popOverContent main .inviteFirstLine {
   margin-top: 3em;
   line-height: 1.5em;
 }
+.popOver #popOverContent main h1.emphasis {
+  font-size: 4vw;
+}
+.popOver #popOverContent main .inviteFirstLine, .popOver #popOverContent main  h2, .popOver #popOverContent main  ul, .popOver #popOverContent main  .cancelButton {
+  font-size: 3.5vw;
+}
 .popOver #popOverContent main .largeText {
-  font-size: 10vw;
+  font-size: 9vw;
 }
 .popOver #popOverContent main hr {
   margin: 1.5em 0 1.5em 0;
@@ -128,8 +140,9 @@ h1 {
   text-align: center;
 }
 .popOver #popOverContent main .inviteDetails {
+  font-size: 3.8vw;
   text-align: center;
-  margin: -3em 20% 0 20%;
+  margin: 0 20% 0 20%;
   line-height: 1.5em;
 }
 .popOver #popOverContent main ul {
@@ -145,18 +158,24 @@ h1 {
   line-height: 1.5em;
 }
 .popOver #popOverContent footer {
-  padding: 3em 3em 6em;
+  padding: 6em 1.5em 8.55em;
   background-color: #9f173d;
   color: white;
+  max-width: 100%;
+}
+.popOver #popOverContent footer h1 {
+  font-size: 4.4vw;
 }
 .popOver #popOverContent footer p {
+  text-align: center;
   margin-bottom: 1.5em;
+  font-size: 3.8vw;
 }
 .popOver #popOverContent footer .CTAbutton {
   background-color: black;
   color: white;
   border: none;
-  height: 7vh;
+  height: 6.5vh;
 }
 .popOver #popOverContent footer .CTAbutton:hover {
   background-color: white;
@@ -180,47 +199,91 @@ h1 {
   color: black;
   padding-left: 10px;
 }
+.popOver #popOverContent footer form .CTAbutton, .popOver #popOverContent footer form input[type=text], .popOver #popOverContent footer form input[type=email] {
+  font-size: 3.5vw;
+}
 .popOver #popOverContent footer form input[type=text], .popOver #popOverContent footer form input[type=email] {
   border: none;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .popOver #popOverContent footer form #confirmationLabel {
   line-height: 1.2em;
   color: #febed5;
   margin-top: 1.5em;
-  font-size: 15px;
+  font-size: 15pt;
+  width: 75%;
   display: grid;
   grid-template-columns: 1fr 5fr;
   justify-items: end;
   column-gap: 10px;
 }
-.popOver #popOverContent footer form #confirmationLabel > input {
+.popOver #popOverContent footer form input[type=checkbox] {
   -webkit-appearance: none;
   -moz-appearance: none;
   -o-appearance: none;
   appearance: none;
   border: solid 1px #fbb6ce;
-  padding: 5px;
+  padding: 9px;
   width: 15px;
   height: 15px;
 }
-.popOver #popOverContent footer form #confirmationLabel > input:checked + span::before {
+.popOver #popOverContent footer form input[type=checkbox]:checked + span::before {
   content: "✓";
   position: absolute;
-  margin-top: 2px;
-  margin-left: -25.5px;
+  margin-top: 1.5px;
+  margin-left: -29px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 360px) {
   .popOver .rectangleFrame:first-child {
     height: 19.5%;
   }
-  .popOver #popOverContent .inviteDetails {
-    margin-top: 7.5em;
+}
+@media screen and (min-width: 320px) and (max-width: 492px) {
+  .popOver #popOverContent main .inviteFirstLine, .popOver #popOverContent main  h2, .popOver #popOverContent main  ul, .popOver #popOverContent main  .cancelButton {
+    font-size: 4.375vw;
+  }
+  .popOver #popOverContent main .inviteDetails {
+    font-size: 4.75vw;
+  }
+  .popOver #popOverContent footer h1 {
+    font-size: 5.5vw;
+  }
+  .popOver #popOverContent footer p {
+    font-size: 4.75vw;
+  }
+  .popOver #popOverContent footer form .CTAbutton, .popOver #popOverContent footer form input[type=text], .popOver #popOverContent footer form input[type=email] {
+    font-size: 4.375vw;
+  }
+  .popOver #popOverContent footer form #confirmationLabel {
+    font-size: 3.5vw;
+  }
+  .popOver #popOverContent footer form input[type=checkbox]:checked + span::before {
+    margin-top: 6px;
+    margin-left: -27px;
   }
 }
 @media screen and (min-width: 360px) and (max-width: 890px) {
   .popOver .rectangleFrame:first-child {
     height: 32%;
+  }
+}
+@media screen and (min-width: 520px) and (max-width: 1258px) {
+  ul, h2 {
+    font-size: 3.5vw;
+  }
+}
+@media screen and (min-width: 900px) {
+  .popOver #popOverContent footer form .CTAbutton, .popOver #popOverContent footer form input[type=text], .popOver #popOverContent footer form input[type=email] {
+    font-size: 2.8vw;
+    height: 8vh;
+  }
+  .popOver #popOverContent footer form #formText {
+    column-gap: 10px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-rows: minmax(0, 1fr);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -232,7 +295,7 @@ h1 {
     margin-top: -40%;
   }
   .popOver .rectangleFrame {
-    width: 160px;
+    width: 8.5%;
   }
   .popOver .rectangleFrame:first-child {
     height: 410px;
@@ -256,26 +319,19 @@ h1 {
     margin-right: 3%;
     margin-top: 1.5em;
   }
-  .popOver footer h1 {
+  .popOver #popOverContent footer h1 {
     font-size: 32pt;
   }
-  .popOver footer p {
+  .popOver #popOverContent footer p {
     font-size: 23pt;
   }
-  .popOver footer form .CTAbutton, .popOver footer form input[type=text], .popOver footer form input[type=email] {
+  .popOver #popOverContent footer form .CTAbutton, .popOver #popOverContent footer form input[type=text], .popOver #popOverContent footer form input[type=email] {
     font-size: 21pt;
+    height: 9vh;
   }
-  .popOver footer form #confirmationLabel {
+  .popOver #popOverContent footer form #confirmationLabel {
     grid-template-columns: 1fr 9fr;
-    width: 70%;
     font-size: 15pt;
-  }
-  .popOver footer form #formText {
-    display: grid;
-    column-gap: 10px;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: 0;
-    row-gap: 10px;
   }
 }
 @media screen and (min-width: 1347px) and (max-width: 1454px) {
