--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,16 @@ $mobileWidth: 320px;
 $spacingHeight: 1.5em;
 $spacingWidth: 10px;
 
-$desktopWidthFontSize1: 21pt;
-$desktopWidthFontSize2: 24pt;
-$desktopWidthFontSize3: 23pt;
-$desktopWidthFontSize4: 32pt;
-$desktopWidthFontSize5: 15pt;
+$desktopFontSize1: 21pt;
+$desktopFontSize2: 24pt;
+$desktopFontSize3: 23pt;
+$desktopFontSize4: 32pt;
+$desktopFontSize5: 15pt;
+
+$mobileFontSize1: 3.5vw;
+$mobileFontSize2: 4vw;
+$mobileFontSize3: 3.8vw;
+$mobileFontSize4: 4.4vw;
 
 $translucentGrey: transparentize(#454545, 0.1);
 $frameGrey: #f5f5f5;
@@ -16,7 +21,7 @@ $footer_FontRed: #9f173d;
 $checkboxLabelPink: #febed5;
 $checkboxPink: #fbb6ce;
 
-$checkboxFontSize: 15px;
+$checkboxFontSize: 15pt;
 
 .freightFontItlaic {
     font-family: freight-big-pro, serif;
@@ -94,7 +99,7 @@ h1 {
     }
 
     .rectangleFrame:last-child {
-        height: 55px;
+        height: 60px;
         margin-top: $spacingHeight * -5.5;
         margin-bottom: $spacingHeight * 3;
     }
@@ -131,7 +136,6 @@ h1 {
         @extend .centerAlign;
 
         background-color: white;
-        border: black 1px solid;
 
         // invite text + image
         main {
@@ -149,7 +153,16 @@ h1 {
                 cursor: pointer;
             }
 
-            h1, h2 {
+            // grid
+            .mainContent {
+                display: grid;
+                grid-template-rows: repeat(autofill, minmax(0, 1fr));
+                row-gap: $spacingHeight;
+                justify-items: center;
+                align-content: center;
+            }
+
+            h2 {
                 margin-bottom: $spacingHeight;
             }
 
@@ -162,8 +175,16 @@ h1 {
                 @extend .freightFontItlaic;
             }
 
+            h1.emphasis {
+                font-size: $mobileFontSize2;
+            }
+
+            .inviteFirstLine, h2, ul, .cancelButton {
+                font-size: $mobileFontSize1;
+            }
+
             .largeText {
-                font-size: 10vw;
+                font-size: 9vw;
             }
 
             hr {
@@ -176,8 +197,9 @@ h1 {
             }
 
             .inviteDetails {
+                font-size: $mobileFontSize3;
                 text-align: center;
-                margin: -$spacingHeight * 2 20% 0 20%;
+                margin: 0 20% 0 20%;
                 line-height: $spacingHeight;
             }
 
@@ -200,13 +222,19 @@ h1 {
         // form 
         footer {
             @extend .centerAlign;
-            padding: $spacingHeight * 2 $spacingHeight * 2 $spacingHeight * 4;
-
+            padding: $spacingHeight * 4 $spacingHeight $spacingHeight * 5.7;
             background-color: $footer_FontRed;
             color: white;
+            max-width: 100%;
+
+            h1 {
+                font-size: $mobileFontSize4;
+            }
 
             p {
+                text-align: center;
                 margin-bottom: $spacingHeight;
+                font-size: $mobileFontSize3;
             }
 
             .CTAbutton {
@@ -216,7 +244,7 @@ h1 {
                 color: white;
                 border: none;
 
-                height: 7vh;
+                height: 6.5vh;
             }
             
             .CTAbutton:hover {
@@ -226,6 +254,7 @@ h1 {
             
             form {
                 @extend .centerAlign;
+                // font-size: $mobileFontSize1;
 
                 #formText {
                     display: grid;
@@ -252,16 +281,24 @@ h1 {
                     padding-left: $spacingWidth;
                 }
 
-                input[type=text], input[type=email] {
-                    border: none;
+                .CTAbutton, input[type=text], input[type=email] {
+                    font-size: $mobileFontSize1;
                 }
 
-                // checkbox + label styling
-                #confirmationLabel {
+                input[type=text], input[type=email] {
+                    border: none;
+                    font-family: futura-pt, sans-serif;
+                    font-weight: 400;
+                    font-style: normal;
+                }
+
+                 // checkbox + label styling
+                 #confirmationLabel {
                     line-height: $spacingHeight / 1.25;
                     color: $checkboxLabelPink;
                     margin-top: $spacingHeight;
                     font-size: $checkboxFontSize;
+                    width: 75%;
 
                     display: grid;
                     grid-template-columns: 1fr 5fr;
@@ -269,23 +306,23 @@ h1 {
                     column-gap: $spacingWidth;
                 }
 
-                #confirmationLabel > input{
+                input[type=checkbox] {
                     -webkit-appearance: none;
                     -moz-appearance: none;
                     -o-appearance: none;
                     appearance: none;
 
                     border: solid 1px $checkboxPink;
-                    padding: 5px;
+                    padding: 9px;
                     width: 15px;
                     height: 15px;
                 }
 
-                #confirmationLabel > input:checked + span::before {
+                input[type=checkbox]:checked + span::before {
                     content: '\2713';
                     position: absolute;
-                    margin-top: 2px;
-                    margin-left: -25.5px;
+                    margin-top: 1.5px;
+                    margin-left: -29px;
                 }
             }
         }
@@ -298,10 +335,45 @@ h1 {
         .rectangleFrame:first-child {
             height: 19.5%;
         }
+    }
+}
 
+@media screen and (min-width: $mobileWidth) and (max-width: 492px) {
+    .popOver {
         #popOverContent {
-            .inviteDetails {
-                margin-top: $spacingHeight * 5;
+            main {
+                .inviteFirstLine, h2, ul, .cancelButton {
+                    font-size: $mobileFontSize1 * 1.25;
+                }
+
+                .inviteDetails {
+                    font-size: $mobileFontSize3 * 1.25;
+                }
+            }
+
+            footer {
+                h1 {
+                    font-size: $mobileFontSize4 * 1.25;
+                }
+            
+                p {
+                    font-size: $mobileFontSize3 * 1.25;
+                }
+            
+                form {     
+                    .CTAbutton, input[type=text], input[type=email] {
+                        font-size: $mobileFontSize1 * 1.25;
+                    }
+                                  
+                    #confirmationLabel {
+                        font-size: 3.5vw;
+                    }
+
+                    input[type=checkbox]:checked + span::before {
+                        margin-top: 6px;
+                        margin-left: -27px;
+                    }
+                }
             }
         }
     }
@@ -315,10 +387,36 @@ h1 {
     }
 }
 
+@media screen and (min-width: 520px) and (max-width: 1258px) {
+    ul, h2 {
+        font-size: $mobileFontSize1;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .popOver {
+        #popOverContent {
+            footer {
+                form {     
+                    .CTAbutton, input[type=text], input[type=email] {
+                        font-size: $mobileFontSize1 * 0.8;
+                        height: 8vh;
+                    }
+            
+                    #formText {
+                        column-gap: $spacingWidth;
+                        grid-template-columns: repeat(3, minmax(0, 1fr));
+                        grid-template-rows: minmax(0, 1fr);
+                    }
+                }
+            }
+        }
+    }
+}
+
 // desktop 
 @media screen and (min-width: $desktopWidth) {
     .popOver {
-        // images
         .chiselImg {
             margin-left: -81.5%;
             margin-top: 20%;
@@ -329,7 +427,7 @@ h1 {
         }
 
         .rectangleFrame {
-            width: 160px;
+            width: 8.5%;
         }
 
         .rectangleFrame:first-child {
@@ -339,11 +437,11 @@ h1 {
         #popOverContent {
             main {
                 .inviteFirstLine, h2, ul, .cancelButton {
-                    font-size: $desktopWidthFontSize1;
+                    font-size: $desktopFontSize1;
                 }
 
                 h1.emphasis {
-                    font-size: $desktopWidthFontSize2;
+                    font-size: $desktopFontSize2;
                 }
                 
                 .largeText {
@@ -351,7 +449,7 @@ h1 {
                 }
 
                 p.inviteDetails {
-                    font-size: $desktopWidthFontSize3;
+                    font-size: $desktopFontSize3;
                 }
     
                 hr {
@@ -363,35 +461,26 @@ h1 {
                     margin-top: $spacingHeight;
                 }
             }
-        }
 
-        footer {
-            h1 {
-                font-size: $desktopWidthFontSize4;
-            }
-
-            p {
-                font-size: $desktopWidthFontSize3;
-            }
-
-            form {                
-                .CTAbutton, input[type=text], input[type=email] {
-                    font-size: $desktopWidthFontSize1;
+            footer {
+                h1 {
+                    font-size: $desktopFontSize4;
                 }
 
-                #confirmationLabel {
-                    grid-template-columns: 1fr 9fr;
-                    width: 70%;
-                    font-size: $desktopWidthFontSize5;
+                p {
+                    font-size: $desktopFontSize3;
                 }
 
-                #formText {
-                    display: grid;
-                    column-gap: $spacingWidth;
-                    grid-template-columns: repeat(3, minmax(0, 1fr));
+                form {     
+                    .CTAbutton, input[type=text], input[type=email] {
+                        font-size: $desktopFontSize1;
+                        height: 9vh;
+                    }
 
-                    grid-template-rows: 0;
-                    row-gap: $spacingWidth;
+                    #confirmationLabel {
+                        grid-template-columns: 1fr 9fr;
+                        font-size: $desktopFontSize5;
+                    }
                 }
             }
         }
